--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ cqrs-es = "0.4.5"
 postgres-es = "0.4.5"
 
 anyhow = "1.0.66"
-async-trait = "0.1"
-axum = "0.5.17"
+async-trait = "0.1.58"
+axum = "0.6.0"
 chrono = "0.4.23"
-clap = { version = "4.0.26", default_features = true, features = ["derive"] }
+clap = { version = "4.0.27", default_features = true, features = ["derive"] }
 config = "0.13.2"
 enum_delegate = "0.2.0"
 futures = "0.3.25"
@@ -31,14 +31,15 @@ once_cell = "1.16.0"
 prometheus = { version = "0.13.3", features = ["process"] }
 prometheus-static-metric = "0.5.1"
 secrecy = "0.8.0"
-serde = "1.0.147"
-serde_json = "1.0.87"
+serde = "1.0.148"
+serde_json = "1.0.89"
 serde_yaml = "0.9.14"
-serde_with = { version = "2.0.1", features = ["chrono", "json", "macros"]}
+serde_with = { version = "2.1.0", features = ["chrono", "json", "macros"] }
+sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "json"] }
 strum = "0.24.1"
 strum_macros = "0.24.3"
 thiserror = "1.0.37"
-tokio = { version = "1.21.2", features = ["full", "io-util", "tracing"] }
+tokio = { version = "1.22.0", features = ["full", "io-util", "tracing"] }
 tower = { version = "0.4.13", features = ["timeout", "limit",] }
 tower-http = { version = "0.3.4", features = [ "add-extension", "trace", "timeout", "compression-full", "decompression-full", "request-id" ] }
 tracing = "0.1.37"
@@ -54,7 +55,7 @@ validator = { version = "0.16.0", features = ["derive"] }
 [dev-dependencies]
 fake = { version = "2.5.0", features = ["chrono"] }
 pretty_assertions = "1.3.0"
-serde_test = "1.0.147"
+serde_test = "1.0.148"
 temp-env = "0.3.1"
 tokio-test = "0.4.2"
 wiremock = "0.5.15"
