--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,17 +9,17 @@ name = "bankaccount"
 path = "src/main.rs"
 
 [dependencies]
-pretty-snowflake = { git = "https://github.com/dmrolfs/pretty-snowflake-rs" }
+pretty-snowflake = { git = "https://github.com/dmrolfs/pretty-snowflake-rs", features = ["envelope"] }
 settings_loader = { git = "https://github.com/dmrolfs/settings-loader-rs", features = ["database", "http"] }
 
 cqrs-es = "0.4.5"
 postgres-es = "0.4.5"
 
 anyhow = "1.0.66"
-async-trait = "0.1.58"
-axum = "0.6.0"
+async-trait = "0.1.59"
+axum = "0.6.1"
 chrono = "0.4.23"
-clap = { version = "4.0.27", default_features = true, features = ["derive"] }
+clap = { version = "4.0.29", default_features = true, features = ["derive"] }
 config = "0.13.2"
 enum_delegate = "0.2.0"
 futures = "0.3.25"
@@ -30,6 +30,7 @@ money2 = { version = "0.8.3", features = ["serde", "num-traits",] }
 once_cell = "1.16.0"
 prometheus = { version = "0.13.3", features = ["process"] }
 prometheus-static-metric = "0.5.1"
+reqwest = { version = "0.11", features = ["json", "rustls-tls"]}
 secrecy = "0.8.0"
 serde = "1.0.148"
 serde_json = "1.0.89"
@@ -59,3 +60,25 @@ serde_test = "1.0.148"
 temp-env = "0.3.1"
 tokio-test = "0.4.2"
 wiremock = "0.5.15"
+
+# On Windows
+# ```
+# cargo install -f cargo-binutils
+# rustup component add llvm-tools-preview
+# ```
+[target.x86_64-pc-windows-msvc]
+rustflags = ["-C", "link-arg=-fuse-ld=lld"]
+[target.x86_64-pc-windows-gnu]
+rustflags = ["-C", "link-arg=-fuse-ld=lld"]
+
+# On Linux:
+# - Ubuntu, `sudo apt-get install lld clang`
+# - Arch, `sudo pacman -S lld clang` [target.x86_64-unknown-linux-gnu]
+[target.x86_64-unknown-linux-gnu]
+rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
+
+# On MacOS, `brew install michaeleisel/zld/zld`
+[target.x86_64-apple-darwin]
+rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
+[target.aarch64-apple-darwin]
+rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
