--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ serde = "1.0.148"
 serde_json = "1.0.89"
 serde_yaml = "0.9.14"
 serde_with = { version = "2.1.0", features = ["chrono", "json", "macros"] }
+smol_str = "0.1.23"
 strum = "0.24.1"
 strum_macros = "0.24.3"
 thiserror = "1.0.37"
